--- a/src/layout/components/Header.css
+++ b/src/layout/components/Header.css
@@ -2,10 +2,9 @@
 .header-area {
   top: 0;
   left: 0;
-  width: 100%;
   z-index: 1000;
-  background-color: #ffffff; /* Set a background color */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow for better visibility */
+  background-color: #ffffff; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,11 +20,10 @@
 
 .header-logo-smaller img,
 .company-logo-larger img {
-  max-height: 50px; /* Adjust based on your design */
+  max-height: 50px; 
   object-fit: contain;
 }
 
-/* For larger screens, show the large logo and hide the small one */
 .header-logo-smaller {
   display: none;
 }
