--- a/src/layout/pages/ProductPage.css
+++ b/src/layout/pages/ProductPage.css
@@ -84,10 +84,13 @@
   margin-top: 20px;
 }
 
-.home-header h1,
-.product-header h1 {
+.home-header h1 {
   font-size: 2.5rem;
   color: #333;
+}
+
+.product-header h1{
+  font-size: 2rem;
 }
 
 .home-header p {
@@ -105,7 +108,7 @@
   }
 
   .product-search-area {
-    max-width: 90%; /* Adjust input width on smaller screens */
+    max-width: 85%; /* Adjust input width on smaller screens */
     padding: 5px 10px;
   }
 
@@ -118,9 +121,12 @@
     margin-left: 5px; /* Reduced margin for smaller screens */
   }
 
-  .home-header h1,
-  .product-header h1 {
+  .home-header h1{
     font-size: 2rem; /* Slightly smaller heading on smaller screens */
+  }
+
+  .product-header h1{
+    font-size: 1.8rem;
   }
 
   .home-header p {
@@ -130,7 +136,7 @@
 
 @media (max-width: 480px) {
   .product-search-area {
-    max-width: 95%; /* Full width on very small screens */
+    max-width: 85%; /* Full width on very small screens */
     padding: 5px;
   }
 
@@ -143,9 +149,12 @@
     font-size: 0.9rem; /* Smaller text size for smaller screens */
   }
 
-  .home-header h1,
-  .product-header h1 {
+  .home-header h1 {
     font-size: 1.8rem; /* Even smaller heading on mobile */
+  }
+
+  .product-header h1{
+    font-size: 1.5rem;
   }
 
   .home-header p {
