--- a/src/layout/components/Header.css
+++ b/src/layout/components/Header.css
@@ -1,17 +1,18 @@
-/* General header styling */
+@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
+
 .header-area {
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: #ffffff; 
+  background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
+  font-family: "Arvo", serif;
 }
 
-/* Logo styling */
 .header-logo-smaller,
 .company-logo-larger {
   display: flex;
@@ -20,7 +21,7 @@
 
 .header-logo-smaller img,
 .company-logo-larger img {
-  max-height: 50px; 
+  max-height: 50px;
   object-fit: contain;
 }
 
@@ -32,10 +33,10 @@
   display: none;
 }
 
-/* Main menu styling */
 .main-menu {
   display: flex;
   align-items: center;
+  font-family: "Arvo", serif;
 }
 
 .menu-list {
@@ -50,6 +51,8 @@
   font-weight: 600;
   transition: color 0.3s ease;
   gap: 20px;
+  font-family: "Arvo", serif;
+  font-size: 0.8rem;
 }
 
 .icon-list-menu-mobile {
@@ -69,7 +72,6 @@
   font-weight: bolder;
 }
 
-/* Mobile topbar */
 .topbar-right {
   display: flex;
   align-items: center;
@@ -81,6 +83,7 @@
   font-weight: bold;
   text-decoration: none;
   color: inherit;
+  font-family: "Arvo", serif;
 }
 
 .modal-btn {
@@ -92,34 +95,32 @@
   cursor: pointer;
 }
 
-/* Right nav */
 .right-nav {
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-right: 20px;
 }
 
 .icon-list {
   display: flex;
-  gap: 5px;
+  gap: 1px;
   align-items: center;
   color: #333;
-  margin-right: 20px;
 }
+
 .icon-list-menu {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 2px;
   border-radius: 50px;
-  padding: 5px;
+  padding: 2px;
   cursor: pointer;
 }
 
 .icon-list-menu span {
   display: flex;
   align-items: center;
-  font-size: 10px;
+  font-size: 8px;
 }
 
 .icon-list-menu:hover {
@@ -129,7 +130,6 @@
   border: #00aced 2px solid;
 }
 
-/* Sidebar button */
 .sidebar-button.mobile-menu-btn {
   background-color: transparent;
   border: none;
@@ -171,7 +171,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   z-index: 9999;
 }
@@ -179,7 +179,6 @@
 .menu-modal-content {
   background: #fff;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -193,13 +192,16 @@
   font-weight: bold;
   text-decoration: none;
   transition: color 0.3s;
+  font-family: "Arvo", serif;
+  margin-left: 5%;
 }
 
 .menu-modal .drop-down:hover {
   color: #00aced;
 }
 
-.menu-modal-header, .auth-modal-header {
+.menu-modal-header,
+.auth-modal-header {
   display: flex;
   width: 100%;
   height: 10vh;
@@ -207,7 +209,7 @@
   align-items: center;
 }
 
-.auth-modal-header-head{
+.auth-modal-header-head {
   display: flex;
   width: 80%;
   align-items: center;
@@ -217,14 +219,13 @@
   color: #333;
 }
 
-.form-heading{
+.form-heading {
   display: flex;
   align-items: center;
   justify-content: center;
   color: #116888;
   font-size: 25px;
 }
-
 
 @media (max-width: 992px) {
   .header-logo-smaller {
@@ -240,10 +241,9 @@
   }
 }
 
-/* Mobile styles */
-@media (max-width: 482px) {
+@media (max-width: 560px) {
   .main-menu {
-    display: none; /* Hide main menu by default */
+    display: none;
   }
 
   .mobile-logo-area {
