--- a/src/layout/components/LoginForm.css
+++ b/src/layout/components/LoginForm.css
@@ -1,20 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
+
 .login-form {
   display: flex;
   flex-direction: column;
   padding: 20px 30px;
   max-width: 90%;
-  margin: 20px auto; /* Center the form */
+  margin: 20px auto;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  font-family: "Arvo", serif;
 }
 
 .login-content {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-bottom: 20px; /* Add some space between fields */
-  position: relative; /* To position the label and icon inside the field */
+  margin-bottom: 20px;
+  position: relative;
 }
 
 label {
@@ -25,8 +28,9 @@ label {
   top: 50%;
   transform: translateY(-50%);
   transition: 0.2s ease all;
-  pointer-events: none; /* Prevent label from being clickable */
-  opacity: 0; /* Initially, label is invisible */
+  pointer-events: none;
+  opacity: 0;
+  font-family: "Arvo", serif;
 }
 
 input {
@@ -36,27 +40,28 @@ input {
   border-radius: 4px;
   outline: none;
   transition: border-color 0.3s;
-  padding-left: 35px; /* Space for label */
-  padding-right: 40px; /* Space for the eye icon */
+  padding-left: 35px;
+  padding-right: 40px;
+  font-family: "Arvo", serif;
 }
 
 input:focus {
-  border-color: #00aced; /* Highlight border on focus */
+  border-color: #00aced;
 }
 
 input:not(:placeholder-shown) + label,
 label.label-active {
-  opacity: 1; /* Show label when the input is filled */
+  opacity: 1;
   top: 0;
   font-size: 12px;
-  color: #00aced; /* Change label color when active */
+  color: #00aced;
   background: #fff;
   padding: 0 10px;
 }
 
 .login-content .eye-icon {
   position: absolute;
-  right: 10px; /* Position the icon inside the input field */
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
@@ -65,13 +70,14 @@ label.label-active {
 }
 
 .login-content .eye-icon:hover {
-  color: #333; /* Darken the icon on hover */
+  color: #333;
 }
 
 .error {
   color: #d9534f;
   font-size: 12px;
   margin-top: 5px;
+  font-family: "Arvo", serif;
 }
 
 button {
@@ -84,10 +90,11 @@ button {
   cursor: pointer;
   transition: background-color 0.3s;
   margin-top: 20px;
+  font-family: "Arvo", serif;
 }
 
 button:hover {
-  background-color: #007ab8; /* Darken button on hover */
+  background-color: #007ab8;
 }
 
 button:disabled {
@@ -99,19 +106,19 @@ p {
   font-size: 14px;
   margin-top: 20px;
   text-align: center;
+  font-family: "Arvo", serif;
 }
 
-.account-verify{
+.account-verify {
   color: #00aced;
   cursor: pointer;
   text-decoration: underline;
 }
 
 .account-verify:hover {
-  color: #007ab8; /* Change color on hover */
+  color: #007ab8;
 }
 
-/* Responsive design */
 @media (max-width: 480px) {
   .login-form {
     padding: 20px;
